<resources>
    <string name="app_name">NetworkingApp</string>
    <string name="makerequest">MakeRequest</string>
    <string name="username">UserName</string>
    <string name="all_users">All Users</string>
    <string name="lastname">lastName</string>
    <string name="gender">gender</string>
    <string name="email">email</string>
    <string name="user_ic">user icon</string>
    <string name="connection_lost_error_message">Check your internet connection</string>
</resources>